[CDS-86006]: adding logic for traffic routing step inherit option and some other code optimization